--- a/NatLib.Web/NatLib.Web.csproj
+++ b/NatLib.Web/NatLib.Web.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Extension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rss.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
